--- a/cicd/install-cicd-flow.yaml
+++ b/cicd/install-cicd-flow.yaml
@@ -8,6 +8,7 @@
      password: r3dh4t1!
      your_prefix: maltron
      domain: testdrive.com
+     cloudapps: cloudapps.{{ domain }}
   tasks:
      - name: Setting namespace for stage
        set_fact: stage_namespace="{{ your_prefix }}-tasks-stage"
@@ -25,7 +26,7 @@
           - gogs
           - gogs_migrate
 
-     - set_fact: gogs_public_url="{{ your_prefix }}-gogs.cloudapps.{{ domain }}"
+     - set_fact: gogs_public_url="{{ your_prefix }}-gogs.{{ cloudapps }}"
        tags:
           - gogs
           - gogs_migrate
@@ -46,7 +47,7 @@
           - gogs
           - gogs_migrate
 
-     - set_fact: gogs_public_url="gogs.cloudapps.{{ domain }}"
+     - set_fact: gogs_public_url="gogs.{{ cloudapps }}"
        when: no_prefix is defined and no_prefix | bool
        tags:
           - gogs
@@ -185,7 +186,7 @@
        when: no_prefix is defined and no_prefix | bool
 
      - name: (NO PREFIX) Creating a simpler Jenkins Route
-       command: oc expose service/jenkins --hostname=jenkins.cloudapps.{{ domain }}
+       command: oc expose service/jenkins --hostname=jenkins.{{ cloudapps }}
        when: no_prefix is defined and no_prefix | bool
 
      - name: (NO PREFIX) Patch a Route
@@ -202,7 +203,7 @@
        command: oc new-app docker.io/openshiftdemos/sonarqube:6.0 -e SONARQUBE_JDBC_USERNAME=sonar -e SONARQUBE_JDBC_PASSWORD=sonar -e SONARQUBE_JDBC_URL=jdbc:postgresql://postgresql/sonar --namespace {{ tooling_namespace }}
 
      - name: (NO PREFIX) Create a Router to SonarQube with a simpler Route
-       command: oc expose service/sonarqube --hostname=sonarqube.cloudapps.{{ domain }} --namespace {{ tooling_namespace }}
+       command: oc expose service/sonarqube --hostname=sonarqube.{{ cloudapps }} --namespace {{ tooling_namespace }}
        when: no_prefix is defined and no_prefix | bool
 
      - name: (NO PREFIX) Create a Router to SonarQube
@@ -217,7 +218,7 @@
        when: no_prefix is defined and no_prefix | bool
 
      - name: (NO PREFIX) Creating a simple route for Nexus
-       command: oc expose service/nexus --hostname=nexus.cloudapps.{{ domain }} --namespace {{ tooling_namespace }}
+       command: oc expose service/nexus --hostname=nexus.{{ cloudapps }} --namespace {{ tooling_namespace }}
        when: no_prefix is defined and no_prefix | bool
 
      - name: Remove Volume from Nexus
