Added a playbook to prepare a simple RHEL host with all the necessary tooling

--- a/cicd/micromaltron/gogs-offline.yaml
+++ b/cicd/micromaltron/gogs-offline.yaml
@@ -70,6 +70,10 @@ items:
     selector:
       app: gogs
       deploymentconfig: gogs
+    sessionAffinity: None
+    type: ClusterIP
+  status:
+    loadBalancer: {}
 - apiVersion: v1
   kind: Route
   metadata:
