--- a/cicd/micromaltron/gogs-offline.yaml
+++ b/cicd/micromaltron/gogs-offline.yaml
@@ -74,7 +74,7 @@ items:
     type: ClusterIP
   status:
     loadBalancer: {}
-- apiVersion: v1
+- apiVersion: route.openshift.io/v1
   kind: Route
   metadata:
     labels:
