--- a/prepare/roles/prepare/vars/main.yaml
+++ b/prepare/roles/prepare/vars/main.yaml
@@ -14,6 +14,7 @@ prereqs_packages:
    - git
    - net-tools
    - bind-utils
+   - deltarpm
    - atomic-openshift-excluder
    - atomic-openshift-docker-excluder
    - iptables-services
