--- a/prepare/ansible.cfg
+++ b/prepare/ansible.cfg
@@ -5,4 +5,4 @@ inventory = prepare_hosts
 # override ssh_config ControlPath to use hashed value to handle long node names
 [ssh_connection]
 control_path = %(directory)s/%%h-%%r
-ssh_args = -o StrictHostKeyChecking=no
+ssh_args = -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
