--- a/cicd/install-cicd-flow.yaml
+++ b/cicd/install-cicd-flow.yaml
@@ -88,37 +88,29 @@
        until: create_namespace.rc == 0
        retries: 60
        delay: 10
-       tags:
-         - gogs
 
      - name: "Creating Gogs (GIT Server): {{ gogs_public_url }}"
        command: oc new-app -f http://bit.ly/openshift-gogs-persistent-template -p HOSTNAME={{ gogs_public_url }} -p SKIP_TLS_VERIFY=true --namespace {{ tooling_namespace }}
-       tags: 
-         - gogs
+       tags: [ gogs ]
+
+     - name: "Fixing Postgresql version 9.6"
+       command: "oc patch dc/gogs-postgresql --patch='{\"spec\": {\"triggers\": [{\"imageChangeParams\": {\"automatic\": true,\"containerNames\": [\"postgresql\"],\"from\": {\"kind\": \"ImageStreamTag\",\"name\": \"postgresql:9.6\",\"namespace\": \"openshift\"}},\"type\": \"ImageChange\"},{\"type\": \"ConfigChange\"}]}}'"
+       tags: [ gogs ]
 
      - name: "Change imagePullPolicy on Gogs to: Always -> IfNotPresent"
        command: oc patch dc/gogs --patch '{"spec":{"template":{"spec":{"containers":[{"name":"gogs","imagePullPolicy":"IfNotPresent"}]}}}}' --namespace {{ tooling_namespace }}
-       tags:
-          - gogs
 
      - name: Remove Volume from Gogs
        command: oc volume dc/gogs --name=gogs-data --remove --namespace {{ tooling_namespace }}
        when: no_volume is defined and no_volume | bool
-       tags:
-         - gogs
 
      - name: Remove Volume from Postgresql's Gogs
        command: oc volume dc/gogs-postgresql --name=gogs-postgres-data --remove --namespace {{ tooling_namespace }}
        when: no_volume is defined and no_volume | bool
-       tags:
-         - gogs
 
      - name: Setting Gogs URL
-       set_fact: gogs_url="http{{ ':' }}//gogs.{{ tooling_namespace }}.svc.cluster.local:3000"
-       tags: 
-         - gogs
-         - gogs_webhook
-         - gogs_migrate
+       set_fact: gogs_url="http{{ ':' }}//gogs.{{ cloudapps }}"
+       tags: [ gogs, gogs_webhook, gogs_migrate ]
 
      - name: Wait for Gogs to be ready{{ ":" }} {{ gogs_url }}
        uri: url="{{ gogs_url }}" status_code=200 
@@ -126,8 +118,7 @@
        until: gogs_wait.status == 200
        retries: 60
        delay: 10
-       tags: 
-         - gogs
+       tags: [ gogs ]
 
      - name: Wait for Postgresql for Gogs to be Create
        command: oc get pods --output jsonpath='{$..spec.containers[?(@.name=="gogs-postgresql")]}' --namespace {{ tooling_namespace }}
@@ -135,43 +126,35 @@
        until: gogs_postgresql_create.rc == 0
        retries: 60
        delay: 10
-       tags:
-        - gogs
+       tags: [ gogs ]
 
      - name: Fetch a page to find CSRF
        uri: url={{ gogs_url }}/user/sign_up  method=GET status_code=200
        register: gogs_content
-       tags:
-        - gogs
+       tags: [ gogs ]
 
      - name: Fetch CSRF to submit with a page
        set_fact: csrf={{ gogs_content.set_cookie | regex_replace("^(.*)_csrf=","") | regex_replace("[;](.*)$", "") }}
-       tags:
-        - gogs
+       tags: [ gogs ]
 
      - name: Create (or Submit) a user{{ ':' }}{{ username }} password{{ ':' }}{{ password }}
        uri: url={{ gogs_url }}/user/sign_up  method=POST status_code=302
             method=POST headers="Content-type=application/x-www-form-urlencoded"
             body="_csrf={{ csrf }}&user_name={{ username }}&email={{ username }}%40demo.com&password={{ password }}&retype={{ password }}"
-       tags:
-        - gogs
+       tags: [ gogs ]
 
      - name: Migrating OpenShift Tasks from GitHub to Gogs
        uri: method=POST body_format=json url={{ gogs_url }}/api/v1/repos/migrate status_code=201
             user={{ username }} password={{ password }} force_basic_auth=yes
             body="{\"clone_addr\"{{ ":" }}\"https{{ ":" }}//github.com/OpenShiftDemos/openshift-tasks.git\",\"uid\"{{ ":" }} 1,\"repo_name\"{{ ":" }} \"openshift-tasks\"}"
        ignore_errors: True
-       tags:
-        - gogs
-        - gogs_migrate
+       tags: [ gogs, gogs_migrate ]
 
      - name: Add a WebHook to trigger the Pipeline
        uri: method=POST body_format=json url="{{ gogs_url }}/api/v1/repos/{{ username }}/openshift-tasks/hooks" status_code=201
             user={{ username }} password={{ password }} force_basic_auth=yes
             body="{\"type\"{{ ":" }}\"gogs\",\"config\"{{ ":" }}{\"url\"{{ ":" }}\"https://openshift.default.svc.cluster.local/oapi/v1/namespaces/{{ tooling_namespace }}/buildconfigs/tasks-pipeline/webhooks/generictasks/generic\",\"content_type\"{{ ":" }}\"json\"},\"events\"{{ ":" }}[\"push\"],\"active\"{{ ":" }}true}"
-       tags:
-        - gogs
-        - gogs_webhook
+       tags: [ gogs, gogs_webhook ]
 
      - name: Creating Jenkins (CI/CD Server) -Persistent-
        command: oc new-app jenkins-persistent -p ENABLE_OAUTH=true --namespace {{ tooling_namespace }}
