--- a/cicd/install-cicd-flow.yaml
+++ b/cicd/install-cicd-flow.yaml
@@ -9,7 +9,7 @@
      password: r3dh4t1!
      your_prefix: maltron
      domain: testdrive.com
-     cloudapps: apps.sanjose-4539.openshiftworkshop.com
+     cloudapps: apps.sanjuan-4983.openshiftworkshop.com
   tasks:
      - name: Setting namespace for stage
        set_fact: stage_namespace="{{ your_prefix }}-tasks-stage"
@@ -172,6 +172,9 @@
        command: oc new-app jenkins-ephemeral -p ENABLE_OAUTH=true --namespace {{ tooling_namespace }}
        when: no_volume is defined and no_volume | bool
 
+     - name: Wait a while before moving on
+       pause: seconds=30
+
      - name: (NO PREFIX) Deleting original Jenkins Route
        command: oc delete route/jenkins --namespace {{ tooling_namespace }}
        when: no_prefix is defined and no_prefix | bool
@@ -193,6 +196,9 @@
      - name: Creating SonarQube
        command: oc new-app docker.io/openshiftdemos/sonarqube:6.0 -e SONARQUBE_JDBC_USERNAME=sonar -e SONARQUBE_JDBC_PASSWORD=sonar -e SONARQUBE_JDBC_URL=jdbc:postgresql://postgresql/sonar --namespace {{ tooling_namespace }}
 
+     - name: Wait a while before moving on
+       pause: seconds=30
+
      - name: (NO PREFIX) Create a Router to SonarQube with a simpler Route
        command: oc expose service/sonarqube --hostname=sonarqube.{{ cloudapps }} --namespace {{ tooling_namespace }}
        when: no_prefix is defined and no_prefix | bool
@@ -203,6 +209,9 @@
 
      - name: Creating Nexus
        command: oc new-app https://raw.githubusercontent.com/OpenShiftDemos/nexus-openshift-docker/master/nexus-persistent.yaml --namespace {{ tooling_namespace }}
+
+     - name: Wait a while before moving on
+       pause: seconds=30
 
      - name: (NO PREFIX) Removing original Nexus route
        command: oc delete route/nexus --namespace {{ tooling_namespace }}
